# STL-Adapters

./: .gitignore  CMakeLists.txt
lib/: aggregate.h  as_vector.h  data_flow.h  dir.h  drop_nullopt.h  filter.h  join.h  open_files.h  out.h  processing.h  split.h  split_expected.h  transform.h  veiw.h  write.h
tests/: CMakeLists.txt  aggregate_by_key_ut.cpp  dir_ut.cpp  drop_nullopt_ut.cpp  filter_ut.cpp  flow_convertions_ut.cpp  join_ut.cpp  split_expected_ut.cpp  split_ut.cpp  transform_ut.cpp  write_ut.cpp
